# hipng

./: CMakeLists.txt  CMakeSettings.json  README.md  shaders.cmake  thirdparty.cmake
editor/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/assets/: AssetHandle.hpp  AssetSubsystem.hpp
engine/include/concurrency/: AsioContext.hpp  AtomicUIntTuple.hpp  BlockingThreadPool.hpp  CachelinePad.hpp  EventQueue.hpp  LockfreeQueue.hpp  MultiLock.hpp  OpParkingLot.hpp  SpinWait.hpp  Spinlock.hpp  StaticScope.hpp  ThreadPool.hpp
engine/include/core/: Assert.hpp  DependencySystem.hpp  Engine.hpp  EngineHandle.hpp  EnginePhases.hpp  GameplaySystem.hpp  InputHandler.hpp  WindowSystem.hpp
engine/include/rendering/: ActorSystem.hpp  FramePacket.hpp  GlobalRenderer.hpp  GuiSystem.hpp  IRenderer.hpp  RenderingSubsystem.hpp  StaticMeshRenderer.hpp  TempForwardRenderer.hpp  ViewPerspective.hpp  Viewport.hpp  Window.hpp  WindowRenderer.hpp
engine/include/rendering/actors/: StaticMesh.hpp
engine/include/rendering/gpu_storage/: GpuStorageManager.hpp  Material.hpp  StaticMesh.hpp
engine/include/rendering/gui/: GuiFramePacket.hpp  GuiManager.hpp  ImGuiConfig.h
engine/include/rendering/primitives/: InflightResource.hpp
engine/include/rendering/render_graph/: Node.hpp  NodeCustomizations.hpp  PhysicalResourceProvider.hpp  RenderGraph.hpp  RenderGraphBuilder.hpp  Resource.hpp
engine/include/util/: Align.hpp  Assert.hpp  DebugBreak.hpp  Defer.hpp  EnumFlags.hpp  HeapArray.hpp  Mixins.hpp  TargetInfo.hpp
engine/resources/config/: input.yaml
engine/shaders/: metalic_roughness.h  static_mesh.frag  static_mesh.vert
engine/shaders/shader_cpp_bridge/: common.h  static_mesh.h
engine/source/assets/: AssetSubsystem.cpp
engine/source/concurrency/: AsioContext.cpp  ThreadPool.cpp
engine/source/core/: Assert.cpp  DependencySystem.cpp  Engine.cpp  EngineHandle.cpp  InputHandler.cpp  WindowSystem.cpp
engine/source/rendering/: ActorSystem.cpp  GlobalRenderer.cpp  GuiSystem.cpp  RenderingSubsystem.cpp  StaticMeshRenderer.cpp  TempForwardRenderer.cpp  ViewPerspective.cpp  Viewport.cpp  VulkanSystem.cpp  VulkanSystem.hpp  Window.cpp  WindowRenderer.cpp
engine/source/rendering/gpu_storage/: GpuStorageManager.cpp
engine/source/rendering/gui/: GuiManager.cpp  ImGuiStorage.cpp
engine/source/rendering/primitives/: Shader.cpp  UniqueVmaBuffer.cpp  UniqueVmaImage.cpp
engine/source/rendering/render_graph/: Node.cpp  PhysicalResourceProvider.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp
test/: CMakeLists.txt  main.cpp
